# tiny_reed_solomon_coding

./: CMakeLists.txt  LICENSE  README.md
src/: reed_solomon.cpp
